# gladgan

./: .gitignore  README.md  Test_API.R  codes_transparency_db.csv  overview.Rmd  overview.html  readme.html  readme.md  test2.R
1_ongoing/company-data/: README.md  financial_statements_results.csv  pyproject.toml
1_ongoing/company-data-discovery/: README.md  import requests.py  pyproject.toml
1_ongoing/company-data-discovery/challenge/: README-Challenge.md  create-discovery-clean.R  create-discovery-subset.R  discovery-clean-h1.csv  discovery-clean-h2.csv  discovery-clean.csv  discovery-subset.csv  discovery.csv  discovery_approach_description.docx  discovery_approach_description.pages  discovery_approach_description.txt
1_ongoing/company-data-discovery/results/: discovery_approach_description.docx  first-run-final.csv  first-run.csv  first-run.json
1_ongoing/company-data-discovery/scraper/: company_report_finder.py  company_report_finder_fixed.py  discovery.csv  discovery_csv_generator.py  first-100.txt  fixed_main.py  fixed_main_script.py  log.txt  main_script.py  readme.md  requirements.txt  run_script.py  test_script.py  to-be-changed.md
1_ongoing/company-data-discovery/scraper-v2/: annual_report_finder.py  api_tracker.py  config_handler.py  empty_invalid_refyear.py  first-test-run.json  first-test-run3.json  google_api_usage.csv  google_search.py  issues.txt  link_processor.py  readme.md  result_ranker.py  results.json  results_to_csv.py  results_to_csv_with_id.py  setup_google_api.md
1_ongoing/company-data-discovery/submission/: discovery.csv
(+1132 files in other folders)
